--- a/client/public/locales/en/users.json
+++ b/client/public/locales/en/users.json
@@ -40,16 +40,16 @@
     "companyBS": "Company BS",
     "addCompanyBS": "Add company BS",
     "validCompanyBSRequired": "Valid company bs required",
-    "addressCity": "City",
-    "addAddressCity": "Add city",
-    "validAddressCityRequired": "Valid city required",
-    "addressStreet": "Street",
-    "addAddressStreet": "Add street",
-    "validAddressStreetRequired": "Valid street required",
-    "addressSuite": "Suite",
-    "addAddressSuite": "Add suite",
-    "validAddressSuiteRequired": "Valid suite required",
-    "addressZipcode": "Zipcode",
-    "addAddressZipcode": "Add zipcode",
-    "validAddressZipcodeRequired": "Valid zipcode required"
+    "city": "City",
+    "addCity": "Add city",
+    "validCityRequired": "Valid city required",
+    "street": "Street",
+    "addAStreet": "Add street",
+    "validStreetRequired": "Valid street required",
+    "suite": "Suite",
+    "addSuite": "Add suite",
+    "validSuiteRequired": "Valid suite required",
+    "zipcode": "Zipcode",
+    "addZipcode": "Add zipcode",
+    "validZipcodeRequired": "Valid zipcode required"
 }
