Implemented reset users and tackled various enhancements.

--- a/client/public/locales/en/users.json
+++ b/client/public/locales/en/users.json
@@ -1,4 +1,6 @@
 {
+    "resetUsers": "Reset Users",
+    "resetUsersFailed": "Reset users from jsonplaceholder.typicode.com failed",
     "users": "Users",
     "emptyUsersList": "No Users",
     "emptyUsersListTagline": "Add a new user and it will show up here.",
@@ -15,25 +17,25 @@
     "addUserLocation": "Click on map to add a new user",
     "editUserLocation": "Click on map to edit user location",
     "userDetails": "User Details",
-    "searchUsers": "Search users by name or email",
+    "searchUsers": "Search users",
     "name": "Name",
     "addName": "Add your full name",
     "validNameRequired": "Valid name required",
     "username": "Username",
-    "addUsername": "Add your username",
+    "addUsername": "Ex: f.aljabi",
     "validUsernameRequired": "Valid username required",
     "email": "Email",
-    "addEmail": "Add your email",
+    "addEmail": "Ex: fadi_anwar@hotmail.com",
     "validEmailRequired": "Valid email required",
     "phone": "Phone",
-    "addPhone": "Add your phone number",
+    "addPhone": "Ex: +96566249191",
     "validPhoneRequired": "Valid phone required",
     "website": "Website",
-    "addWebsite": "Ex. https://www.kib.com.kw/",
+    "addWebsite": "Ex. https://www.kib.com.kw",
     "validWebsiteRequired": "Valid website required",
-    "companyName": "Company Name",
-    "AddCompanyName": "Add company name",
-    "validCompanyNameRequired": "Valid company name required",
+    "company": "Company",
+    "addCompany": "Add company name",
+    "validCompanyRequired": "Valid company name required",
     "companyCatchPhrase": "Company Catch Phrase",
     "addCompanyCatchPhrase": "Add company catch phrase",
     "validCompanyCatchPhraseRequired": "Add company catch phrase",
@@ -44,12 +46,15 @@
     "addCity": "Add city",
     "validCityRequired": "Valid city required",
     "street": "Street",
-    "addAStreet": "Add street",
+    "addStreet": "Add street",
     "validStreetRequired": "Valid street required",
     "suite": "Suite",
-    "addSuite": "Add suite",
+    "addSuite": "Ex: Apt. 692",
     "validSuiteRequired": "Valid suite required",
     "zipcode": "Zipcode",
-    "addZipcode": "Add zipcode",
-    "validZipcodeRequired": "Valid zipcode required"
+    "addZipcode": "Ex: 53919-4257",
+    "validZipcodeRequired": "Valid zipcode required",
+    "basicInfo": "Information",
+    "contactInfo": "Contact",
+    "addressInfo": "Address"
 }
